Try fix css on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
-    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6) ), url('/img/back.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6) ), url('file:///C:/Users/Miko/Desktop/mikoxmi.github.io/img/back.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
     background-attachment: fixed;
     background-position: top;
 }
